infra/k8s/capacity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: capacity-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: capacity
    template:
        metadata:
            labels:
                app: capacity
        spec:
            containers:
                - name: capacity
                  image: parthikrb/capacity
---
apiVersion: v1
kind: Service
metadata:
    name: capacity-service
spec:
    selector:
        app: capacity
    ports:
        - name: capacity
          protocol: TCP
          port: 3000
          targetPort: 3000
