infra/k8s/estimation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: estimation-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: estimation
    template:
        metadata:
            labels:
                app: estimation
        spec:
            containers:
                - name: estimation
                  image: parthikrb/estimation
---
apiVersion: v1
kind: Service
metadata:
    name: estimation-service
spec:
    selector:
        app: estimation
    ports:
        - name: estimation
          protocol: TCP
          port: 3000
          targetPort: 3000
