infra/k8s/planner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: planner-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: planner
    template:
        metadata:
            labels:
                app: planner
        spec:
            containers:
                - name: planner
                  image: parthikrb/planner
---
apiVersion: v1
kind: Service
metadata:
    name: planner-service
spec:
    selector:
        app: planner
    ports:
        - name: planner
          protocol: TCP
          port: 3000
          targetPort: 3000
