infra/k8s/release-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release
  template:
    metadata:
      labels:
        app: release
    spec:
      containers:
        - name: release
          image: parthikrb/release
---
apiVersion: v1
kind: Service
metadata:
  name: release-service
spec:
  selector:
    app: release
  ports:
    - name: release
      protocol: TCP
      port: 3000
      targetPort: 3000
