infra/k8s/retro-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: retro-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: retro
    template:
        metadata:
            labels:
                app: retro
        spec:
            containers:
                - name: retro
                  image: parthikrb/retro
---
apiVersion: v1
kind: Service
metadata:
    name: retro-service
spec:
    selector:
        app: retro
    ports:
        - name: retro
          protocol: TCP
          port: 3000
          targetPort: 3000
