infra/k8s/sprint-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sprint-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: sprint
    template:
        metadata:
            labels:
                app: sprint
        spec:
            containers:
                - name: sprint
                  image: parthikrb/sprint
---
apiVersion: v1
kind: Service
metadata:
    name: sprint-service
spec:
    selector:
        app: sprint
    ports:
        - name: sprint
          protocol: TCP
          port: 3000
          targetPort: 3000
