infra/k8s/squad-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: squad-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: squad
    template:
        metadata:
            labels:
                app: squad
        spec:
            containers:
                - name: squad
                  image: parthikrb/squad
---
apiVersion: v1
kind: Service
metadata:
    name: squad-service
spec:
    selector:
        app: squad
    ports:
        - name: squad
          protocol: TCP
          port: 3000
          targetPort: 3000
